# lgcns-mlops-practice

./: batch_prediction.py  pyproject.toml  train.py
logs/: logs,log
predictions/: 20240328_rent_prediction.csv
src/: preprocess.py
src/common/: logger.py
