[project]
name = "lgcns-mlops-practice"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "mumwa", email = "mumwa@naver.com"},
]
dependencies = [
    "pandas>=2.1.4",
    "bentoml>=1.2.6",
    "scikit-learn>=1.3.2",
    "numpy>=1.26.4",
    "mlflow>=2.11.1",
    "category-encoders>=2.6.3",
    "pydantic>=2.6.3",
    "deepchecks>=0.18.1",
    "joblib>=1.3.2",
    "rich>=13.7.1",
    "seaborn>=0.13.2",
]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "black>=24.2.0",
    "matplotlib>=3.8.3",
    "pre-commit>=3.6.2",
    "isort>=5.13.2",
    "mypy>=1.9.0",
    "jupyter>=1.0.0",
]
